<resources>
    <string name="app_name">GlucoTracker</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="show">Show</string>
    <string name="logIn">LOG IN</string>
    <string name="or">or</string>
    <string name="mignon">Mignon</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="signUp">Sign up</string>
    <string name="forgotPassword"> Forgot Password?</string>
    <string name="Forgotmignon">Mignon</string>
    <string name="selectUser">Select User</string>
    <string name="selectGender">Select Gender</string>
    <string name="enterAge">Enter Age</string>
    <string name="rangeOfAge">Range: 12-80</string>
    <string name="physiologicalInfo">Physiological Information</string>
    <string name="enterHeight">Height</string>
    <string name="enterWeight">Weight</string>
    <string name="cm">cm</string>
    <string name="inch">inch</string>
    <string name="weightRange">Range: 30-200 kgs</string>
    <string name="heightRange">Range: 50-250 cm</string>
    <string name="glucoseRange">Range: 3.1-17.5 mmol/L</string>
    <string name="medicalDiagnosis">Health Information</string>
    <string name="diabetesType">Selection Type :</string>
    <string name="normal">Normal</string>
    <string name="type2">≥7</string>
    <string name="glu">GLU-AC</string>
    <string name="mg">mg/dL</string>
    <string name="create">CREATE</string>
    <string name="signIn">Sign in</string>
    <string name="alreadyAccount">Already have an account?</string>
    <string name="navigationHeading">Navigation Heading</string>
    <string name="navigationText">Navigation Text</string>
    <string name="guide">Guide</string>
    <string name="tempRange">20 - 27</string>
    <string name="detection">Detection</string>
    <string name="measurementRecord">Measurement Record</string>
    <string name="date">Sept 7,2016</string>
    <string name="recordData">2 hour after meal</string>
    <string name="biguanide">Biguanide</string>
    <string name="measurement">135</string>
    <string name="data">data</string>
    <string name="healthReminder">Health Reminder</string>
    <string name="fastingBlood">Fasting Blood</string>
    <string name="medication">Measure Medication</string>
    <string name="time">07:00</string>
    <string name="editReminder">Edit Reminder</string>
    <string name="remind">Remind</string>
    <string name="measure">Measure</string>
    <string name="medicationText">Medication</string>
    <string name="save">Save</string>
    <string name="bloodGlucose">Blood Glucose BGL</string>
    <string name="bloodFlowVelocity">Blood Flow Velocity BFV</string>
    <string name="hemoglobin">Hemoglobin HGB</string>
    <string name="oxygenSaturation">Oxygen Saturation SpO2</string>
    <string name="batteryPower">Battery Power (%)</string>
    <string name="shellTemp">Shell Temp./Humi.</string>
    <string name="ambientTemp">Ambient Temp./Humi.</string>
    <string name="st">ST 32.9</string>
    <string name="et">ET 27.7</string>
    <string name="sh">SH 82.8</string>
    <string name="eh">EH 73.2</string>
    <string name="bloodGlucoseText">7.1</string>
    <string name="mmol">mmol/L</string>
    <string name="pulseText">80</string>
    <string name="bloodFlowText">414</string>
    <string name="hemoglobinData">174.3</string>
    <string name="g">g/L</string>
    <string name="oxygenText">97</string>
    <string name="batteryText">39</string>
    <string name="result">Result</string>
    <string name="measurementSettings">Measurement Settings</string>
    <string name="moreThan">More than</string>
    <string name="lessThan">Or less than</string>
    <string name="SpO2">SpO2</string>
    <string name="glucoseMorningFasting">Glucose (Morning Fasting)</string>
    <string name="glucoseAfterMeal">Glucose (2 Hours after meal)</string>
    <string name="abnormalityNotice">Abnormality Notice Contacts</string>
    <string name="email">Email</string>
    <string name="email2">Email 2</string>
    <string name="email3">Email 3</string>
    <string name="measureText">100.0</string>
    <string name="bfv">Blood Flow Velocity</string>
    <string name="confirmUpdate">Confirm Update</string>
    <string name="registerSuccessfully">Register Successfully...!!!</string>
    <string name="registerAgain">Register Again...</string>
    <string name="loginSuccessfully">Login Successfully...!!!</string>
    <string name="loginAgain">Username or Password doesn\'t match...</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="personNameText">Peter Robins</string>
    <string name="weightValueText">56 kgs</string>
    <string name="ageText">24 Years</string>
    <string name="heightValueText">165 Cms</string>
    <string name="guideTextCaps">GUIDE</string>
    <string name="settingsTextCaps">SETTINGS</string>
    <string name="historyTextCaps">HISTORY</string>
    <string name="testTextCaps">TEST</string>
    <string name="profileText">Profile</string>
    <string name="measurementSettingsText">Measurement Settings</string>
    <string name="testText">Test</string>
    <string name="personNameText2">Margot Robbie</string>
    <string name="morningFastingText">Morning Fasting</string>
    <string name="twoHrsPostPrandialText">2 hrs Postprandial</string>
    <string name="noMedicationText">No Medication</string>
    <string name="sulphonylureasText">Sulphonylureas</string>
    <string name="biguanidesText">Biguanides</string>
    <string name="aglucosedasesText">a-Glucosedases</string>
    <string name="historyText">History</string>
    <string name="glucose">Glucose</string>
    <string name="pulse">Pulse</string>
    <string name="bloodFlowText2">Blood Flow</string>
    <string name="bloodFlow">Blood Flow Velocity BFV</string>
    <string name="hemoglobinText">Hemoglobin</string>
    <string name="sp02Text">SpO2</string>
    <string name="dayText">Day</string>
    <string name="weekText">Week</string>
    <string name="monthText">Month</string>
    <string name="periodText">Period</string>
    <string name="lowestText">Lowest</string>
    <string name="highestText">Highest</string>
    <string name="averageText">Average</string>
    <string name="glucoseValueUnit">GLUCOSE VALUE UNIT</string>
    <string name="mMolText">Unit A</string>
    <string name="mMgdlText">Unit B</string>
    <string name="chartText">chart</string>
    <string name="listText">List</string>
    <string name="dateText">2016-4-28</string>
    <string name="deleteTextView">Delete</string>
    <string name="dateTextView">Date</string>
    <string name="timeTextView">Time</string>
    <string name="resultTextView">Result</string>
    <string name="dietTextView">Diet</string>
    <string name="medicineTextView">Medicine</string>
    <string name="unitSettings">Unit Settings</string>
    <string name="heightText">Height</string>
    <string name="cmText">CM</string>
    <string name="inText">inch</string>
    <string name="kgText">Kg</string>
    <string name="lbText">lb</string>
    <string name="weightText">Weight</string>
    <string name="gPerLitreText">g/L</string>
    <string name="gPerdl">g/dL</string>
    <string name="bluetoothSearchText">Bluetooth Search</string>
    <string name="pleaseSelectYourBluetoothDeviceText">Please select your bluetooth device</string>
    <string name="pairedDevicesText">Paired devices</string>
    <string name="searchingText">Searching...</string>
    <string name="availableDevicesText">Available devices</string>
    <string name="scanForDevicesText">Scan for devices</string>
    <string name="gallery">GALLERY</string>
    <string name="camera">CAMERA</string>
    <string name="remove_picture">REMOVE PICTURE</string>
    <string name="ok">OK</string>
    <string name="cancelText">Cancel</string>
    <string name="fromText">From :</string>
    <string name="toText">To :</string>
    <string name="recomendedTemp">Recommended ambient temperature \n 20°C- 27°C </string>
    <string name="spo2less">94</string>
    <string name="hgbMore">165</string>
    <string name="hgbLess">120</string>
    <string name="bfvMore">400</string>
    <string name="bfvLess">220</string>
    <string name="pulseMore">100</string>
    <string name="pulseLess">50</string>
    <string name="gluMorninMore">110</string>
    <string name="gluMorinLess">70</string>
    <string name="gluafterMealLess">140</string>
    <string name="sendEmail">Send Email</string>
    <string name="AUText">AU</string>
    <string name="timePerMinText">time/min</string>
    <string name="percentageText">%</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="notExist">NOT EXIST</string>
    <string name="zero">00.00</string>
    <string name="noTypeSelected">No type selected</string>
    <string name="saved">Saved</string>
    <string name="cancel">Cancel</string>
    <string name="blueColor">blue</string>
    <string name="yellowColor">yellow</string>
    <string name="greenColor">green</string>
    <string name="redColor">red</string>
    <string name="noRecordFound">No Record Found!</string>
    <string name="recordScreenshot">Record Screenshot</string>
    <string name="recordEmailApplication">image/png</string>
    <string name="centimeter">CM</string>
    <string name="yearsText">Years</string>
    <string name="etText">ET</string>
    <string name="stText">ST</string>
    <string name="ehText">EH</string>
    <string name="shText">SH</string>
    <string name="hideText">Hide</string>
    <string name="suitableFingerTemp">Suitable finger temperature  29ﾟC – 35ﾟC</string>
    <string name="havingNoFood">* Having no foods over 8 hours</string>
    <string name="setNormalForTest">* Please set as Normal for test</string>
    <string name="suitableCarbIntake">Suitable carb intake is 1 portion, size like a fist </string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="next">Next</string>
    <string name="carbohydrateIntake">Carbohydrate Intake</string>
    <string name="rev">REV 1.5</string>
    <string name="unitANote">* Unit A stands for mmol/L</string>
    <string name="unitBNote">* Unit B stands for mg/dL</string>
    <string name="updateAtleastOnceAWeek">* Please calibrate the morning fasting value once a week</string>
    <string name="noUsersFound">No User Found</string>
    <string name="accountDeleteSuccessfully">Account has been successfully deleted.</string>
    <string name="deleteSelectedAccounts">Are you sure you want to delete selected accounts?</string>
    <string name="remainingTime">Remaining Time:</string>
    <string name="processing">Testing</string>
    <string name="selectAccountToDelete">Please select an account to delete</string>
    <string name="back_msg">Please click back again to exit</string>
</resources>
