<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editUserLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/editUserImageView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/dp_plus" />

                <ImageView
                    android:id="@+id/changeImageButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignRight="@id/editUserImageView"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:src="@drawable/camera_icon" />
            </RelativeLayout>

            <CustomControl.EditTextGothamBook
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/userName"
                android:singleLine="true"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/line" />

            <CustomControl.TextViewGothamBook
                android:id="@+id/genderTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:hint="@string/selectGender"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <CustomControl.EditTextGothamBook
                    android:id="@+id/enterAgeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/enterAge"
                    android:singleLine="true"
                    android:textSize="17sp" />

                <CustomControl.TextViewGothamBook
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/rangeOfAge" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/line" />

            <CustomControl.TextViewGothamMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/physiologicalInfo"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <CustomControl.EditTextGothamBook
                    android:id="@+id/enterHeightEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:background="@android:color/transparent"
                    android:hint="@string/enterHeight"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:singleLine="true"

                    android:textSize="17sp" />

                <CustomControl.TextViewGothamBook
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/cm"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CustomControl.EditTextGothamBook
                    android:id="@+id/enterHeightEditText1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@android:color/transparent"
                    android:hint="@string/enterHeight"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:textSize="17sp" />

                <CustomControl.TextViewGothamBook
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/inch"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </LinearLayout>

            <CustomControl.TextViewGothamBook
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:text="@string/heightRange" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <CustomControl.EditTextGothamBook
                    android:id="@+id/enterWeightEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:background="@android:color/transparent"
                    android:hint="@string/enterWeight"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:singleLine="true"

                    android:textSize="17sp" />

                <CustomControl.TextViewGothamBook
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/kgText"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CustomControl.EditTextGothamBook
                    android:id="@+id/enterWeightEditText1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:background="@android:color/transparent"
                    android:hint="@string/enterWeight"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:textSize="17sp" />

                <CustomControl.TextViewGothamBook
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/lbText"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </LinearLayout>

            <CustomControl.TextViewGothamBook
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:text="@string/weightRange" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/line" />

            <CustomControl.TextViewGothamMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/medicalDiagnosis"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <CustomControl.TextViewGothamBook
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/diabetesType" />

            <LinearLayout
                android:id="@+id/diagnosisLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/normal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/normalButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/normal" />

                <Button
                    android:id="@+id/typeButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/type2" />

            </LinearLayout>


            <TextView
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/line"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/glucoseLayout"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <CustomControl.EditTextGothamBook
                    android:id="@+id/glucoseEditView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@android:color/transparent"
                    android:hint="@string/glu"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:textSize="17sp" />

                <CustomControl.TextViewGothamBook
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/mmol"
                    android:textColor="@color/black" />

                <CustomControl.EditTextGothamBook
                    android:id="@+id/enterGlucoseEditText1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@android:color/transparent"
                    android:hint="@string/glu"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:textSize="17sp" />

                <CustomControl.TextViewGothamBook
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:text="@string/mg"
                    android:textColor="@color/black" />

            </LinearLayout>

            <CustomControl.TextViewGothamBook
                android:id="@+id/glucoseRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:text="@string/glucoseRange"
                android:visibility="gone" />

            <TextView
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/line"
                android:visibility="gone" />

            <TextView
                android:id="@+id/havingNoFoodText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/havingNoFood"
                android:visibility="gone"
                android:layout_marginLeft="20dp"
                android:textColor="@color/red"/>
            <TextView
                android:id="@+id/setAsNormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updateAtleastOnceAWeek"
                android:layout_marginLeft="20dp"
                android:visibility="gone"
                android:textColor="@color/red"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_shape"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>