<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/changePictureDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <CustomControl.TextViewGothamBook
            android:id="@+id/textview_gallery"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_shape_cream_radius_low"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/gallery"
            android:textColor="@color/blue"
            android:textSize="17sp" />

        <CustomControl.TextViewGothamBook
            android:id="@+id/textview_camera"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_shape_cream_radius_low"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/camera"
            android:textColor="@color/blue"
            android:textSize="17sp" />

        <CustomControl.TextViewGothamBook
            android:id="@+id/textview_remove_picture"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_shape_cream_radius_low"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/remove_picture"
            android:textColor="@color/blue"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>